# shh

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  FAQ.md  README.md  build.rs  cliff.toml  clippy.toml  release  systemd_options.md  test-all  test-stress  test.md  test.md.orig  test_interleave.py
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
logo/: Makefile
src/: cl.rs  extras.rs  main.rs  summarize.rs  sysctl.rs
src/strace/: mod.rs  parser.rs  run.rs
src/strace/parser/: combinator.rs  mod.rs  peg.pest  peg.rs  regex.rs
src/strace/parser/snapshots/: shh__strace__parser__tests__access.snap  shh__strace__parser__tests__bind-2.snap  shh__strace__parser__tests__bind.snap  shh__strace__parser__tests__bitshift.snap  shh__strace__parser__tests__close.snap  shh__strace__parser__tests__epoll-2.snap  shh__strace__parser__tests__epoll.snap  shh__strace__parser__tests__erestartsys.snap  shh__strace__parser__tests__execve.snap  shh__strace__parser__tests__fstatfs-2.snap  shh__strace__parser__tests__fstatfs.snap  shh__strace__parser__tests__getpid.snap  shh__strace__parser__tests__getrandom.snap  shh__strace__parser__tests__in_out_args-2.snap  shh__strace__parser__tests__in_out_args-3.snap  shh__strace__parser__tests__in_out_args.snap  shh__strace__parser__tests__interleave.snap  shh__strace__parser__tests__ioctl.snap  shh__strace__parser__tests__kill_no_sig.snap  shh__strace__parser__tests__macro_addr_arg.snap  shh__strace__parser__tests__mmap-2.snap  shh__strace__parser__tests__mmap.snap  shh__strace__parser__tests__multiplication.snap  shh__strace__parser__tests__name_only-2.snap  shh__strace__parser__tests__name_only-3.snap  shh__strace__parser__tests__name_only.snap  shh__strace__parser__tests__named_args.snap  shh__strace__parser__tests__newfstatat.snap  shh__strace__parser__tests__open_relative.snap  shh__strace__parser__tests__ret_code.snap  shh__strace__parser__tests__rt_sigaction.snap  shh__strace__parser__tests__rt_sigprocmask.snap  shh__strace__parser__tests__sched_getaffinity.snap  shh__strace__parser__tests__truncated-2.snap  shh__strace__parser__tests__truncated.snap  shh__strace__parser__tests__wait.snap
src/summarize/: handlers.rs  mod.rs
src/systemd/: journal.rs  mod.rs  options.rs  resolver.rs  service.rs  version.rs
src/systemd/options/: mod.rs  specs.rs
test-env/: clean  run  run-test  setup
tests/: cl.rs  end_to_end.rs  options.rs  profile.rs  systemd-run.rs
tests/snapshots/: options__tests__run_bind-2.snap  options__tests__run_bind.snap  options__tests__run_dmesg.snap  options__tests__run_gimp.snap  options__tests__run_ls_dev.snap  options__tests__run_ls_modules.snap  options__tests__run_ls_proc-2.snap  options__tests__run_ls_proc.snap  options__tests__run_mknod-2.snap  options__tests__run_mknod.snap  options__tests__run_mmap_wx-2.snap  options__tests__run_mmap_wx.snap  options__tests__run_ping_4.snap  options__tests__run_ping_6.snap  options__tests__run_read_kallsyms.snap  options__tests__run_sched_realtime-2.snap  options__tests__run_sched_realtime.snap  options__tests__run_sock_packet-2.snap  options__tests__run_sock_packet.snap  options__tests__run_ss.snap  options__tests__run_syslog.snap  options__tests__run_systemctl.snap  options__tests__run_true.snap  options__tests__run_write_dev_null.snap
