[package]
name = "shh"
version = "2024.6.4"
authors = ["Maxime Desbrus <maxime.desbrus@synacktiv.com>"]
description = "Automatic systemd service hardening guided by strace profiling"
readme = "README.md"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.72", default-features = false, features = ["std", "backtrace"] }
bincode = { version = "1.3.3", default-features = false }
clap = { version = "4.3.17", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
function_name = { version = "0.3.0", default-features = false, optional = true }
itertools = { version = "0.11.0", default-features = false, features = ["use_std"] }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.19", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
nix = { version = "0.26.2", default-features = false, features = ["fs"] }
nom = { version = "7.1.3", default-features = false, features = ["std"], optional = true }
pest = { version = "2.7.10", default-features = false, features = ["std", "memchr"], optional = true }
pest_derive = { version = "2.7.10", default-features = false, features = ["std", "grammar-extras"], optional = true}
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
regex = { version = "1.9.1", default-features = false, features = ["std", "perf"] }
serde = { version = "1.0.193", default-features = false, features = ["std", "derive"] }
signal-hook = { version = "0.3.17", default-features = false, features = ["iterator"] }
simple_logger = { version = "4.2.0", default-features = false, features = ["colors", "stderr"] }
strum = { version = "0.25.0", default-features = false, features = ["std", "derive"] }
tempfile = { version = "3.7.0", default-features = false }

[dev-dependencies]
assert_cmd = { version = "2.0.12", default-features = false, features = ["color", "color-auto"] }
fastrand = { version = "2.0.0", default-features = false, features = ["std"] }
nix = { version = "0.26.2", default-features = false, features = ["user"] }
predicates = { version = "3.0.3", default-features = false, features = ["color"] }
pretty_assertions = { version = "1.4.0", default-features = false, features = ["std"] }

[features]
default = ["strace-parser-combinator"]
as-root = [] # for tests only
nightly = [] # for benchmarks only
strace-parser-combinator = ["dep:function_name", "dep:nom"]
strace-parser-peg = ["dep:pest", "dep:pest_derive"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
multiple_inherent_impl = "warn"
ref_patterns = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_to_string = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

[package.metadata.deb]
name = "shh"
depends = "$auto, strace"
